# db_implement

./: .env  .gitignore  alembic.ini  config.py  justfile  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: cb18e87bdf81_initial_schema.py
db_files/customers/: clients.csv
db_files/mercuriales/: mercuriale_compass.csv  mercuriale_elior.csv  mercuriale_medelys.csv  mercuriale_sodexo_ouverte.csv
db_implement/: models.py
db_implement/assets/db_files/mercuriales/: mercuriale_compass.csv
db_implement/importers/: base.py  import_manager.py
importers/: customer_importer.py
scripts/: populate_db.py
src/: app.py  config.py  models.py
src/core/: config.py  constants.py  exceptions.py  formats.py  logging.py  types.py  utils.py
src/importers/: __init__.py  assignment_importer.py  assignment_rule_importer.py  base.py  base_importer.py  customer_assignment_importer.py  customer_importer.py  import_manager.py  mercuriale_importer.py  product_importer.py
src/models/: __init__.py  assignment_conditions.py  assignment_rules.py  associations.py  customer.py  mercuriale.py  models.py  order.py  product.py
src/repositories/: customer_repository.py
src/services/: customer_matching_service.py  customer_repository.py  database_service.py  document_processing_service.py  pdf_extraction_service copy.py  pdf_extraction_service.py  pdf_table_extraction_service.py  po_header_extraction_service.py  product_validation_service.py  purchase_order_pipeline_service.py  purchase_order_service.py
src/static/css/: base.css  components.css  pages.css
src/static/js/: base.js  components.js  index.js
src/templates/: base.html  elior.html  index.html  login.html
temp/: import_manager copy.py
