[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "db-implement"
version = "0.1.0"
description = "Database implementation project"
authors = [
    { name = "MatthieuLeNozach", email = "matthieu.le.nozach@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    # --- Core Python tools ---
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "ftfy>=6.3.1",
    "unidecode>=1.4.0",
    "crayons>=0.4.0",
    # --- Web backend ---
    "flask>=3.1.1",
    "flask-session>=0.8.0",
    "gunicorn>=23.0.0",
    "werkzeug>=3.0.0",
    # --- OAuth / Auth ---
    "msal>=1.32.3",
    # --- Data & ML stack ---
    "pandas>=2.3.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.7.0",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    # --- PDF & document processing ---
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.0",
    "reportlab>=4.4.3",
    # --- Google APIs ---
    "google-api-python-client>=2.171.0",
    "google-auth-oauthlib>=1.2.2",
    # --- Database & ORM ---
    "duckdb>=1.4.0",
    "sqlite4>=0.1.1",
    "sqlite-web>=0.5.0",
    "sqlalchemy>=2.0.43",
    "alembic>=1.16.5",
    # --- Dev tools / Jupyter ---
    "jupyterlab>=4.4.3",
    "rapidfuzz>=3.14.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]  # Changed from src/db_implement to src
